03 Jan 2000

- Fixed two_axes and negative values
- released 1.22

Dec 1999, mgjv

- Development and support back to me, mgjv. GIFgraph and Chart::PNGgraph
  (hopefully) will both become wrappers around this new set of modules.

- Renamed to GD::Graph
- Removed direct font handling stuff, and moved font handling to
  GD::Text::Align objects
- Removed methods for writing to files directly. it is now up to the
  user of the module to save the image to a file. GIFgraph and
  Chart::PNGgraph will still do this
- plot method now returns a reference to a gd object, no longer the
  image data. GIFgraph and Chart::PNGgraph still exhibit old beahviour.
- Added some new options, and split up some others. 
- Added new methods, mainly to detect the useability level of the
  current GD.
- Changed any die and warn statements to croak and carp

Thu October 21 1999 by sbonds@agora.rdrop.com
- Chart::PNGgraph version 1.13
- Added primitive support for TrueType fonts
- Fixed bug where 3d charts with very large slices would not have both
  parts of the front filled properly.

Thu October 7 1999  by sbonds@agora.rdrop.com
- Chart::PNGgraph version 1.12
- Changed namespace to Chart:PNGgraph so that CPAN will index it properly
- Added "base" tests-- still very incomplete
- Changed sample 5-2 to have multiple lines since this is what the html
  file described it as having.
- Checks the read-only attributes 'pngx' and 'pngy' so these will not get
  accidently set.  $g->set() returns undef if they are present, but the
  rest of the attributes will be set.

Tue August 31 1999  by sbonds@agora.rdrop.com
- Please contact me rather than the original author for problems unless
  you are convinced that the problems are not a result of the port to PNG
- Converted GIFgraph-1.10 to PNGgraph-1.10 so it works properly with GD-1.20
- UNISYS has been increasingly defensive of the LZW patent used in GIF
  compression, which necessitates these kinds of fixes.  

Tue August 25 1998
