@@ -1,3 +1,13 @@
+05 Jan 2000
+
+- removed all references to perl version from any code. Leaving it up to
+  users to find out for themselves. They'll just need to read the
+  documentation.
+- Applied patch from Jeremy Wadsack fixing text sticking out of pie
+  slices causing fills to fail
+- cleanup of code in pie.pm: draw_data, filling front of pie, and
+  _get_pie_front_coords.
+
 03 Jan 2000
 
 - Fixed two_axes and negative values
